--- a/styles/dev.css
+++ b/styles/dev.css
@@ -8,14 +8,17 @@
   scroll-behavior: smooth;
 }
 /* common styles */
-.mt{
+.mt {
   margin-top: 50px;
 }
-.mb{
+.mb {
   margin-bottom: 50px;
 }
 .textPrimary {
   color: rgb(253, 110, 10);
+}
+.textAlign{
+  text-align: center;
 }
 .btn {
   border-radius: 5px;
@@ -184,4 +187,12 @@ main section {
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
   background: rgb(255, 255, 255);
   padding: 30px;
+}
+/* resume styles */
+.resumeContainer {
+  display: flex;
+  gap: 24px;
+}
+hr {
+  border: 1px solid rgb(209, 209, 209);
 }
