--- a/styles/dev.css
+++ b/styles/dev.css
@@ -11,6 +11,12 @@
 .mt {
   margin-top: 50px;
 }
+.mt-2{
+  margin-bottom: 24px ;
+}
+.mb-2{
+  margin-bottom: 24px ;
+}
 .mb {
   margin-bottom: 50px;
 }
@@ -195,4 +201,23 @@ main section {
 }
 hr {
   border: 1px solid rgb(209, 209, 209);
+}
+/* footer styles */
+footer{
+  background: rgb(255, 248, 243);
+  padding: 230px 130px;
+  display: flex;
+  gap: 24px;
+}
+.social a img{
+  margin-right: 24px;
+}
+.footColumn input[type="text"], input[type="email"], textarea{
+  width: 100%;
+  padding: 30px 18px;
+  margin-bottom: 24px;
+  border: none;
+  outline: none;
+  border-radius: 16px;
+  resize: none;
 }
