--- a/styles/style.css
+++ b/styles/style.css
@@ -93,13 +93,13 @@
 .sectionTittle {
   color: rgb(24, 24, 24);
   font-family: Open Sans;
-  font-size: 35px;
+  font-size: 2rem;
   font-weight: 700;
 }
 .sectionTittleTwo {
   color: rgb(71, 71, 71);
   font-family: Open Sans;
-  font-size: 30px;
+  font-size: 1.8rem;
   font-weight: 700;
 }
 .sectionSubtittle {
@@ -152,7 +152,7 @@ header {
   align-items: center;
 }
 .bannerContent {
-  max-width: 585px;
+  max-width: 100%;
 }
 .bgImages {
   background-image: url(/images/developer.png), url(/images/header_bg.png);
@@ -167,20 +167,26 @@ main {
 main section {
   margin-top: 130px;
 }
-.aboutContainer {
+.about__container {
   border-radius: 10px;
   background: rgb(255, 248, 243);
   padding: 130px 150px;
   text-align: center;
 }
-.aboutSummery {
-  display: flex;
-  justify-content: space-between;
+.about__summery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.about__item{
+  max-width: 100%;
 }
 /* what i do styles */
 .skillsContainer {
-  display: flex;
-  gap: 24px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  gap: 2rem;
+  max-width: 100%;
 }
 .whatIdocontent {
   padding: 0px 100px;
@@ -188,16 +194,18 @@ main section {
 }
 /* ...SKILLS */
 .skill {
-  max-width: 267px;
-  border-radius: 5px;
+  max-width: 100%;
+  border-radius: 0.5rem;
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
   background: rgb(255, 255, 255);
-  padding: 30px;
+  padding: 2rem;
 }
 /* resume styles */
-.resumeContainer {
-  display: flex;
+.resume__container {
+  display: grid;
   gap: 24px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
 }
 hr {
   border: 1px solid rgb(209, 209, 209);
@@ -220,4 +228,8 @@ footer{
   outline: none;
   border-radius: 16px;
   resize: none;
+}
+/* extra */
+.hide{
+  display: none;
 }
