--- a/styles/media.css
+++ b/styles/media.css
@@ -99,6 +99,13 @@
     margin: 10px;
     padding: 10px;
   }
+  .btn2{
+    display: none;
+  }
+   .navMenu li:nth-child(3){
+    display: none;
+    margin: 0 auto;
+  }
 }
 @media screen and (min-width: 200px) and (max-width: 370px) {
   .banner {
@@ -120,8 +127,9 @@
     justify-content: center;
     align-items: center;
   }
-  .navMenu li {
-    margin: 0;
+  .navMenu li:nth-child(1), li:nth-child(2), li:nth-child(3){
+    display: none;
+    margin: 0 auto;
   }
   .hText {
     font-size: 1.5em;
@@ -150,5 +158,47 @@
   .pText{
     text-align: center;
     padding: 10px;
+  }
+  .btn2{
+    display: none;
+  }
+  .btn{
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1000px) and (max-width: 1800px){
+   .bgImages {
+    background-image: url(/images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+  }
+  .btn2{
+    display: none;
+  }
+}
+
+@media screen and (min-width: 570px) and (max-width: 1000px){
+   .bgImages {
+    background-image: url(/images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+  }
+  .banner {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+  nav{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+  .hsubText, .hText, .btn__container, .pText{
+    text-align: center;
+    padding: 10px;
+  }
+  .navMenu li:nth-child(3){
+    display: none;
+    margin: 0 auto;
   }
 }
