--- a/styles/media.css
+++ b/styles/media.css
@@ -99,10 +99,10 @@
     margin: 10px;
     padding: 10px;
   }
-  .btn2{
+  .btn2 {
     display: none;
   }
-   .navMenu li:nth-child(3){
+  .navMenu li:nth-child(3) {
     display: none;
     margin: 0 auto;
   }
@@ -127,7 +127,9 @@
     justify-content: center;
     align-items: center;
   }
-  .navMenu li:nth-child(1), li:nth-child(2), li:nth-child(3){
+  .navMenu li:nth-child(1),
+  li:nth-child(2),
+  li:nth-child(3) {
     display: none;
     margin: 0 auto;
   }
@@ -155,30 +157,30 @@
     width: 80%;
     text-align: center;
   }
-  .pText{
+  .pText {
     text-align: center;
     padding: 10px;
   }
-  .btn2{
+  .btn2 {
     display: none;
   }
-  .btn{
+  .btn {
     margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 1000px) and (max-width: 1800px){
-   .bgImages {
+@media screen and (min-width: 1000px) and (max-width: 1800px) {
+  .bgImages {
     background-image: url(/images/header_bg.png);
     background-repeat: no-repeat;
     background-position: bottom right;
   }
-  .btn2{
+  .btn2 {
     display: none;
   }
 }
 
-@media screen and (min-width: 570px) and (max-width: 1000px){
-   .bgImages {
+@media screen and (min-width: 570px) and (max-width: 1000px) {
+  .bgImages {
     background-image: url(/images/header_bg.png);
     background-repeat: no-repeat;
     background-position: bottom right;
@@ -188,17 +190,84 @@
     justify-content: center;
     align-items: center;
   }
-  nav{
+  nav {
     display: flex;
     justify-content: center;
     flex-direction: row;
   }
-  .hsubText, .hText, .btn__container, .pText{
+  .hsubText,
+  .hText,
+  .btn__container,
+  .pText {
     text-align: center;
     padding: 10px;
   }
-  .navMenu li:nth-child(3){
+  .navMenu li:nth-child(3) {
     display: none;
     margin: 0 auto;
+  }
+}
+/* footer media */
+@media screen and (max-width: 576px) {
+  footer {
+    padding: 230px 50px;
+    margin: 0 auto;
+  }
+  .foot__container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+  }
+  .footColumn {
+    text-align: center;
+  }
+  .social a img {
+    margin-right: 20px;
+  }
+  .sectionTittle {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  footer {
+    padding: 230px 50px;
+    margin: 0 auto;
+  }
+  .foot__container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+  }
+  .footColumn {
+    text-align: center;
+  }
+  .social a img {
+    margin-right: 20px;
+  }
+  .sectionTittle {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  footer {
+    padding: 230px 50px;
+    margin: 0 auto;
+  }
+  .foot__container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+  }
+  .footColumn {
+    text-align: center;
+  }
+  .social a img {
+    margin-right: 20px;
+  }
+  .sectionTittle {
+    font-size: 20px;
   }
 }
